# assembly_engine

./: .gitignore  Cargo.toml  assembly_engine.pyi  pyproject.toml
benches/: benchmark.rs
src/: bbox.rs  connectors.rs  engine.rs  engine_py.rs  lib.rs  octree.rs  py_wrappers.rs
