[package]
name = "assembly_engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "assembly_engine"
#crate-type = ["cdylib", "lib"]

[[bench]]
name = "benchmark"
harness = false

[dependencies]
glam = { version = "0.30.9", features = ["serde"] }
gltf = "1.4.1"
kiss3d = "0.40.0"
ordered-float = "5.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
# Taken from kiss3d deps
bytemuck = { version = "1", features = ["derive"] }
glamx = { version = "0.1", features = ["bytemuck"] }
wgpu = "27"
tokio = { version = "1.49.0", features = ["full"] }
rayon = "1.11.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
rand = "0.9.2"


[dependencies.pyo3]
version = "0.27.0"
features = ["abi3-py310", "experimental-async"]
